navigation bar fixed ,filter collapsed

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -63,9 +63,10 @@ hr {
     border-style: inset;
     border-width: 0.5px;
 }
-.icons {
+.icons { 
     font-size: 1.5em;
     margin-left:4px;
+    
 }
 
 .carousel img { 
@@ -91,17 +92,18 @@ hr {
     margin: 0;
     padding: 0;
 }
-.navbar{
+.navbar{height: auto;
     width: 100%;
-    background-color:  rgb(247, 247, 247);
+    background: rgb(247, 247, 247);
+    background-color: rgb(247, 247, 247);
 }
 .navbar-header{
     display: flex;
-    flex-direction: row;
-    float: right; 
+    flex-direction: row;  
+    float: none; 
     width: 100%;
-   
- background-color: rgb(247, 247, 247);
+     
+    background-color: rgb(247, 247, 247);
     
 }
 
@@ -122,7 +124,9 @@ hr {
 .navbar-toggle .icon-bar:nth-child(3){opacity: 0;background-color: rgb(26, 156, 142)}
 .navbar-toggle .icon-bar:nth-child(4){transform:rotate(45deg)translateY(-4px)translateX(-3px);background-color: rgb(26, 156, 142)}
 
-.navbar .nav {
+.navbar .nav { 
+    padding:0 ;
+    width: 100%;
     float: right;
     text-align: center;
     background-color: rgb(247, 247, 247);
@@ -131,8 +135,7 @@ hr {
 .navbar-brand {
     width: 100px;
     height: 50px;
-    
-    padding:0 0 0 15px;
+    padding:0 0 0 10px;
     float: right;
    
 }
@@ -226,7 +229,11 @@ hr {
  border-radius: 0;
 margin-bottom: 10px;
 }
-    
+.panel{width: 100%;
+    text-align: center;
+    background-color:white;
+    display:inline-block;
+}   
     @keyframes slideDown {
         0% {
             transform: translateY(-100%);
@@ -306,26 +313,30 @@ margin-bottom: 10px;
 
     
         @media only screen and (max-width: 767px) {
-        
-            .navbar{
-              width: 100%;
+     
+            .navbar{ 
+                height: auto;
+               border-radius: 5px;  
             }
-            .navbar .nav{
-               
-                  float: right;
-                  text-align: right;
-               
+            /* .navbar-collapse{
+                width: 100px;
+                float: left;
+            }*/ 
+            .navbar-header{
+                height: 50px;
+            }
+            .navbar-toggle{
+               margin-left: -30px;;
+            }
+              .navbar .nav{ 
+                float: right;
+                text-align: right;
+                margin: 0;
                 list-style: none;
                 width: 100%;
-              } 
-            .navbar-header{
-                display: flex;
-                flex-direction: row;
-               align-items: right;
-               width: 100%;
-            }
-              
-              .nav-item{
+                
+              }               
+              .nav-item{ 
                float: right;
                 text-decoration: right;
                 -webkit-transition:  background 0.3s ease-in-out;
@@ -334,6 +345,9 @@ margin-bottom: 10px;
                 -o-transition:  background 0.3s ease-in-out;
                 transition:  background 0.3s ease-in-out;   
               } 
+              .icons{
+                  margin-bottom: 7px;
+              }
               .carousel div {
                 height: 280px;
                 } 
@@ -356,7 +370,4 @@ margin-bottom: 10px;
               }
             }
 
-
-
-
-    
+          
